feat: 공통 코드 캐시 처리